fixed bug of new songs not showing up on list after saving

--- a/src/components/NewSong/NewSong.css
+++ b/src/components/NewSong/NewSong.css
@@ -29,7 +29,7 @@
   .playing {
     transform: scale(1.1);
     border-color: dodgerblue;
-    box-shadow: 0 0 1rem #FC5130;
+    box-shadow: 0 0 1rem gray;
   }
 
   .chord1 {
